--- a/CSS/main/main.scss
+++ b/CSS/main/main.scss
@@ -19,6 +19,10 @@ body {
   align-items: center;
   justify-content: center;
 
+  img {
+    width: 500px;
+  }
+
 }
 
 .container {
@@ -71,12 +75,12 @@ body {
       border-radius: 7px;
       padding: 0.3em 0.7em;
       transition: all 0.2s;
-    }
-    
-    button:hover {
-      background-color: $base-color;
-      color: white;
-      cursor: pointer;
+
+      &:hover {
+        background-color: $base-color;
+        color: white;
+        cursor: pointer;
+      }
     }
   }
 }
@@ -247,6 +251,16 @@ body {
     }
   }
 }
+@media(max-height: 420px) and (orientation: landscape) {
+  .main1 {
+    height: 225vh;
+  }
+}
+@media(max-width: 460px) {
+  .main1 {
+    justify-content: flex-end;
+  }  
+}
 @media(max-width: 376px) {
   .main1 {
     padding-top: 2.5em;
@@ -305,6 +319,11 @@ body {
         width: 180px;
       }
     }
+  }
+}
+@media(max-height: 420px) and (orientation: landscape) {
+  .main2 {
+    height: 35em;
   }
 }
 
