--- a/CSS/main/main.css
+++ b/CSS/main/main.css
@@ -97,6 +97,11 @@ body {
   opacity: 0.1;
 }
 
+@media (max-width: 420px) and (min-width: 380px) {
+  .mainTexture {
+    height: 75vh;
+  }
+}
 .main1 {
   width: 100%;
   height: 100vh;
