--- a/CSS/main/main.scss
+++ b/CSS/main/main.scss
@@ -108,6 +108,12 @@ body {
   background-repeat: no-repeat;
   opacity: 0.1;
 }
+
+@media(max-width: 420px) and (min-width: 380px) {
+  .mainTexture {
+    height: 75vh;
+  }
+}
 .main1 {
   width: 100%;
   height: 100vh;
