--- a/CSS/main/main.scss
+++ b/CSS/main/main.scss
@@ -321,6 +321,8 @@ body {
       font-size: 1.6em;
       font-family: 'Prompt';
       font-weight: 300;
+      opacity: 0;
+      transition: all 0.5s ease-in-out;
 
       &:hover {
         cursor: pointer;
@@ -329,6 +331,15 @@ body {
       img {
         width: 180px;
       }
+
+    }
+    .goUp {
+      transform: translateY(100px);
+    }
+
+    .visible {
+      opacity: 1;
+      transform: translateY(0);
     }
   }
 }
