--- a/CSS/normalPlan/normalPlan.scss
+++ b/CSS/normalPlan/normalPlan.scss
@@ -29,6 +29,11 @@ body {
   width: 100%;
   height: 190vh;
 }
+@media(min-width: 400px) and (max-width: 1200px) {
+  .container {
+    height: 170vh;
+  }
+}
 
 .upperBanner {
   z-index: 1;
@@ -134,11 +139,12 @@ body {
     text-align: center;
   }
 }
-@media(max-width: 389px) {
+@media(max-width: 450px) {
   .main1 {
     height: 55vh;
 
     h1 {
+      margin-top: 2.5em;
       font-size: 3em;
       text-align: center;
     }
@@ -177,8 +183,39 @@ body {
       margin: 1em 0;
       font-size: 1.5em;
       font-family: 'Prompt';
+      opacity: 0;
+      transition: all 0.5s ease-in-out;
+    }
+
+    .goLeft {
+      transform: translateX(100px);
+    }
+  
+    .goRight {
+      transform: translateX(-100px);
+    }
+  
+    .visible {
+      opacity: 1;
+      transform: translateX(0);
+    }
+
+    @media(max-width: 500px) {
+      .goLeft {
+        transform: translateX(50px);
+      }
+    
+      .goRight {
+        transform: translateX(-50px);
+      }
+
+      .visible {
+        opacity: 1;
+        transform: translateX(0);
+      }
     }
   }
+
 
   .site2 {
     align-items: flex-end;
@@ -262,6 +299,15 @@ body {
 @media(max-width: 850px) {
   .main2 {
     height: 200vh;
+  }
+}
+@media(min-width: 400px) and (max-width: 1200px) {
+  .main2 {
+    height: 130vh;
+
+    .btnbuy {
+      margin-top: -1.3em;
+    }
   }
 }
 @media(max-height: 420px) and (orientation: landscape) {
