--- a/CSS/main/main.css
+++ b/CSS/main/main.css
@@ -19,6 +19,11 @@ body {
   width: 500px;
 }
 
+@media (max-width: 450px) {
+  .loader img {
+    width: 300px;
+  }
+}
 .container {
   width: 100%;
   height: 150vh;
@@ -123,7 +128,7 @@ body {
   font-family: "Prompt";
   font-weight: 600;
   font-size: 100px;
-  background-image: linear-gradient(-225deg, #EB5E55 0%, #D81E5B 29%, #EB5E55 67%, #D81E5B 100%);
+  background-image: linear-gradient(-225deg, #EB5E55 0%, #D81E5B 25%, #EB5E55 50%, #D81E5B 75%, #EB5E55 100%);
   background-size: auto auto;
   background-clip: border-box;
   background-size: 200% auto;
@@ -283,7 +288,99 @@ body {
     padding-top: 2.5em;
   }
 }
+.mainTexture2 {
+  z-index: 0;
+  position: absolute;
+  width: 100%;
+  height: 70vh;
+  background-image: url("https://cdn.wallpapersafari.com/95/63/MjZVHF.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 0.2;
+}
+
 .main2 {
+  width: 100%;
+  height: 70vh;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.main2 .spaceLeft {
+  z-index: 1;
+  margin-left: 4em;
+  padding: 2em;
+  width: 30em;
+  opacity: 0;
+  transition: all 0.8s ease-in-out;
+}
+.main2 .spaceLeft h1 {
+  font-family: "Nunito";
+  font-size: 3em;
+  margin: 0;
+  background-image: linear-gradient(-225deg, #EB5E55 0%, #D81E5B 25%, #EB5E55 50%, #D81E5B 75%, #EB5E55 100%);
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: textclip 2s linear infinite;
+          animation: textclip 2s linear infinite;
+  display: inline-block;
+}
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+.main2 .spaceLeft p {
+  font-family: "Prompt";
+  font-size: 1.2em;
+}
+.main2 .spaceLeft p b {
+  color: #D81E5B;
+}
+.main2 .goLeft {
+  transform: translateX(-50px);
+}
+.main2 .visible {
+  opacity: 1;
+  transform: translateX(0px);
+}
+.main2 .spaceRight img {
+  width: 820px;
+}
+
+@media (max-width: 1200px) {
+  .main2 {
+    justify-content: center;
+  }
+  .main2 .spaceLeft {
+    margin: 0;
+    text-align: center;
+  }
+  .main2 .goLeft {
+    transform: translateY(50px);
+  }
+  .main2 .visible {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+  .main2 .spaceRight {
+    position: absolute;
+    opacity: 0.3;
+  }
+}
+@media (max-width: 850px) {
+  .main2 {
+    justify-content: flex-end;
+  }
+}
+.main3 {
   width: 100%;
   height: 65vh;
   background-color: rgb(234, 234, 234);
@@ -292,18 +389,18 @@ body {
   align-items: center;
   justify-content: center;
 }
-.main2 .middleText {
+.main3 .middleText {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: -1.5em;
 }
-.main2 .middleText span {
+.main3 .middleText span {
   font-size: 40px;
   font-weight: 300;
   font-family: "Prompt";
 }
-.main2 .middleBotones {
+.main3 .middleBotones {
   width: 80%;
   height: 15em;
   margin-top: 2.5em;
@@ -311,7 +408,7 @@ body {
   align-items: center;
   justify-content: center;
 }
-.main2 .middleBotones button {
+.main3 .middleBotones button {
   width: 10em;
   height: 10em;
   margin: 1em;
@@ -326,35 +423,35 @@ body {
   opacity: 0;
   transition: all 0.5s ease-in-out;
 }
-.main2 .middleBotones button:hover {
+.main3 .middleBotones button:hover {
   cursor: pointer;
 }
-.main2 .middleBotones button img {
+.main3 .middleBotones button img {
   width: 180px;
 }
-.main2 .middleBotones .goUp {
+.main3 .middleBotones .goUp {
   transform: translateY(100px);
 }
-.main2 .middleBotones .visible {
+.main3 .middleBotones .visible {
   opacity: 1;
   transform: translateY(0);
 }
 
 @media (max-height: 420px) and (orientation: landscape) {
-  .main2 {
+  .main3 {
     height: 35em;
   }
 }
 @media (max-width: 750px) {
-  .main2 {
+  .main3 {
     height: 65em;
   }
-  .main2 .middleBotones {
+  .main3 .middleBotones {
     flex-direction: column;
     height: 53em;
   }
 }
-.main3 {
+.main4 {
   width: 100%;
   height: 4em;
   background-color: whitesmoke;
@@ -362,18 +459,18 @@ body {
   justify-content: center;
   align-items: center;
 }
-.main3 span {
+.main4 span {
   font-weight: 300;
   font-family: "Prompt";
 }
 
 @media (max-width: 750px) {
-  .main3 {
+  .main4 {
     padding: 1.2em;
   }
 }
 @media (max-width: 450px) {
-  .main3 {
+  .main4 {
     height: 10em;
     width: 90%;
     padding: 0 1.2em;
